修复排版，增加侧边导航栏

--- a/web/lifeguide.css
+++ b/web/lifeguide.css
@@ -97,7 +97,7 @@ body > div, body > main {
 }
 
 /* Push content to make room for sidebar */
-body {
+body.lifeguide-body {
   padding-left: 280px;
 }
 
